--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: djelenc/org-reveal
+          images: djelenc/marked
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
